--- a/Prod.ComponenteLoginAngular.MVC/Prod.ComponenteLoginAngular.MVC.csproj
+++ b/Prod.ComponenteLoginAngular.MVC/Prod.ComponenteLoginAngular.MVC.csproj
@@ -13,7 +13,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.17" />
+    <PackageReference Include="Prod.Seguridad.Auth" Version="1.2.4" />
+    <PackageReference Include="Prod.ServiciosExternos" Version="1.3.74" />
+    <PackageReference Include="Release.Helper" Version="1.3.8" />
+    <PackageReference Include="Release.Helper.WebKoMvc" Version="1.1.4" />
   </ItemGroup>
 
   <ItemGroup>
