--- a/Prod.ComponenteLoginAngular.MVC/appsettings.Development.json
+++ b/Prod.ComponenteLoginAngular.MVC/appsettings.Development.json
@@ -5,5 +5,18 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AppConfig": {
+    "Urls": {
+      "URL_GA_UI": "https://dega.produce.gob.pe/",
+      "URL_MIGRACIONES_API": "http://172.20.11.9:7089/api/PIDE/",
+      "URL_RENIEC_API": "http://172.20.11.9:7019/WCFSistemasService.svc",
+      "URL_SUNAT_API": "http://172.20.11.9:7023/WCFSistemasService.svc",
+      "URL_PRODUCE_VIRTUAL": "http://172.20.11.9:7022/UsuarioExtranetService.svc",
+      "URL_ROLES_API": "http://172.20.11.9:7022/RolesService.svc",
+      "URL_PRODUCE_VIRTUAL_WEB": "http://127.0.0.1:8000/",
+      "URL_PERSONA_API": "http://172.20.11.9:7015/PersonasService.svc",
+      "URL_SEGURIDAD": "http://172.20.11.9:7087/"//bitacora_produce_virtual.host
+    }    
   }
 }
