--- a/Prod.ComponenteLoginAngular.MVC/appsettings.Development.json
+++ b/Prod.ComponenteLoginAngular.MVC/appsettings.Development.json
@@ -16,7 +16,7 @@
       "URL_ROLES_API": "http://172.20.11.9:7022/RolesService.svc",
       "URL_PRODUCE_VIRTUAL_WEB": "http://127.0.0.1:8000/",
       "URL_PERSONA_API": "http://172.20.11.9:7015/PersonasService.svc",
-      "URL_SEGURIDAD": "http://172.20.11.9:7087/"//bitacora_produce_virtual.host
+      "URL_SEGURIDAD": "http://172.20.11.9:7087/"
     }    
   }
 }
