--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/package.json
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/platform-server": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@material/dialog": "^14.0.0",
     "@nguniversal/module-map-ngfactory-loader": "~8.2.6",
     "bootstrap": "^4.6.1",
     "core-js": "^3.20.2",
