--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/package.json
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/package.json
@@ -26,7 +26,9 @@
     "bootstrap": "^4.6.1",
     "core-js": "^3.20.2",
     "jquery": "^3.6.0",
+    "ngx-spinner": "^8.0.3",
     "node-sass": "^5.0.0",
+    "notification": "0.0.6",
     "oidc-client": "~1.11.5",
     "popper.js": "^1.16.1",
     "protractor": "~5.4.2",
