--- a/Prod.ComponenteLoginAngular.MVC/appsettings.Development.json
+++ b/Prod.ComponenteLoginAngular.MVC/appsettings.Development.json
@@ -17,10 +17,10 @@
       "URL_PRODUCE_VIRTUAL_WEB": "http://127.0.0.1:8000/",
       "URL_PERSONA_API": "http://172.20.11.9:7015/PersonasService.svc",
       "URL_SEGURIDAD": "http://172.20.11.9:7087/"
+    },
+    "RegistroTramite": {
+      //"RutaImagenLogo": "\\\\srvfile01\\ssa_des$\\"
+      "RutaImagenLogo": "D:\\ssa_des$\\"
     }
-  },
-
-  "RegistroTramite": {
-    "RutaImagenLogo": "\\\\srvfile01\\ssa_des$\\"
-  }
+  } 
 }
