--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/package.json
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.6.1",
     "core-js": "^3.20.2",
     "jquery": "^3.6.0",
+    "ng-zorro-antd": "^8.5.2",
     "ngx-spinner": "^8.0.3",
     "node-sass": "^5.0.0",
     "notification": "0.0.6",
