--- a/Prod.ComponenteLogin.MVC.Configuracion/Prod.ComponenteLogin.MVC.Configuracion.csproj
+++ b/Prod.ComponenteLogin.MVC.Configuracion/Prod.ComponenteLogin.MVC.Configuracion.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     <PackageReference Include="Prod.ServiciosExternos" Version="1.3.74" />
+    <PackageReference Include="Release.Helper" Version="1.3.8" />
     <PackageReference Include="Release.Helper.WebKoMvc" Version="1.1.4" />
   </ItemGroup>
 
