--- a/Prod.ComponenteLoginAngular.MVC/Prod.ComponenteLoginAngular.MVC.csproj
+++ b/Prod.ComponenteLoginAngular.MVC/Prod.ComponenteLoginAngular.MVC.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Prod.ComponenteLogin.Entidades\Prod.ComponenteLogin.Entidades.csproj" />
     <ProjectReference Include="..\Prod.ComponenteLogin.MVC.Configuracion\Prod.ComponenteLogin.MVC.Configuracion.csproj" />
   </ItemGroup>
 
