--- a/.gitignore
+++ b/.gitignore
@@ -319,4 +319,7 @@ __pycache__/
 # Cake - Uncomment if you are using it
 # tools/
 
-# End of https://www.toptal.com/developers/gitignore/api/aspnetcore
+# End of https://www.toptal.com/developers/gitignore/api/visualstudio
+#ignore files build angular
+Prod.ComponenteLoginAngular.MVC/ClientApp/dist/
+Prod.ComponenteLoginAngular.MVC/wwwroot/dist/
