--- a/Prod.ComponenteLoginAngular.MVC/Properties/launchSettings.json
+++ b/Prod.ComponenteLoginAngular.MVC/Properties/launchSettings.json
@@ -18,10 +18,11 @@
     "Prod.ComponenteLoginAngular.MVC": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": "true",
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
