--- a/Prod.ComponenteLoginAngular.MVC/Properties/launchSettings.json
+++ b/Prod.ComponenteLoginAngular.MVC/Properties/launchSettings.json
@@ -1,9 +1,9 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:43495",
+      "applicationUrl": "http://127.0.0.1:43495",
       "sslPort": 0
     }
   },
