--- a/Prod.ComponenteLoginAngular.MVC/appsettings.Production.json
+++ b/Prod.ComponenteLoginAngular.MVC/appsettings.Production.json
@@ -19,8 +19,8 @@
       "URL_SEGURIDAD": "http://172.20.11.9:7087/"
     },
     "RegistroTramite": {
-      //"RutaImagenLogo": "\\\\srvfile01\\ssa_des$\\"
-      "RutaImagenLogo": "D:\\ssa_des$\\"
+      "RutaImagenLogo": "\\\\srvfile01\\ssa_des$\\"
+      //"RutaImagenLogo": "D:\\ssa_des$\\"
     }
   }
 }
