--- a/Prod.ComponenteLogin.MVC.Configuracion/Prod.ComponenteLogin.MVC.Configuracion.csproj
+++ b/Prod.ComponenteLogin.MVC.Configuracion/Prod.ComponenteLogin.MVC.Configuracion.csproj
@@ -5,11 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="6.4.0" />
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.8" />
-    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+    <PackageReference Include="Autofac" Version="6.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="Prod.ServiciosExternos" Version="1.3.74" />
     <PackageReference Include="Release.Helper" Version="1.3.8" />
     <PackageReference Include="Release.Helper.WebKoMvc" Version="1.1.4" />
