--- a/Prod.ComponenteLoginAngular.MVC/Prod.ComponenteLoginAngular.MVC.csproj
+++ b/Prod.ComponenteLoginAngular.MVC/Prod.ComponenteLoginAngular.MVC.csproj
@@ -13,15 +13,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.17" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Prod.Seguridad.Auth" Version="1.2.4" />
     <PackageReference Include="Prod.ServiciosExternos" Version="1.3.74" />
-    <PackageReference Include="Release.Helper" Version="1.3.8" />
-    <PackageReference Include="Release.Helper.WebKoMvc" Version="1.1.4" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
