--- a/Prod.ComponenteLoginAngular.MVC/appsettings.Development.json
+++ b/Prod.ComponenteLoginAngular.MVC/appsettings.Development.json
@@ -21,6 +21,11 @@
     "RegistroTramite": {
       //"RutaImagenLogo": "\\\\srvfile01\\ssa_des$\\"
       "RutaImagenLogo": "D:\\ssa_des$\\"
+    },
+    "RegistroUsuario": {
+      "IdRol": "687", //738
+      "IdAplicacion": "90", //240
+      "Usuario": "VUSP" // login_unico
     }
   } 
 }
