--- a/Prod.ComponenteLoginAngular.MVC/appsettings.Production.json
+++ b/Prod.ComponenteLoginAngular.MVC/appsettings.Production.json
@@ -14,13 +14,17 @@
       "URL_SUNAT_API": "http://172.20.11.9:7023/WCFSistemasService.svc",
       "URL_PRODUCE_VIRTUAL": "http://172.20.11.9:7022/UsuarioExtranetService.svc",
       "URL_ROLES_API": "http://172.20.11.9:7022/RolesService.svc",
-      "URL_PRODUCE_VIRTUAL_WEB": "http://127.0.0.1:8000/",
+      "URL_PRODUCE_VIRTUAL_WEB": "https://desistemasv2.produce.gob.pe/",
       "URL_PERSONA_API": "http://172.20.11.9:7015/PersonasService.svc",
       "URL_SEGURIDAD": "http://172.20.11.9:7087/"
     },
     "RegistroTramite": {
       "RutaImagenLogo": "\\\\srvfile01\\ssa_des$\\"
-      //"RutaImagenLogo": "D:\\ssa_des$\\"
+    },
+    "RegistroUsuario": {
+      "IdRol": "687", //738
+      "IdAplicacion": "90", //240
+      "Usuario": "VUSP" // login_unico
     }
   }
 }
