--- a/Prod.ComponenteLogin.Core/Prod.ComponenteLogin.Core.csproj
+++ b/Prod.ComponenteLogin.Core/Prod.ComponenteLogin.Core.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-    <PackageReference Include="Prod.ServiciosExternos" Version="1.3.73" />
+    <PackageReference Include="Prod.ServiciosExternos" Version="1.3.74" />
     <PackageReference Include="Release.Helper" Version="1.3.8" />
     <PackageReference Include="Release.Helper.Data.ICore" Version="1.0.7" />
     <PackageReference Include="System.ServiceModel.Duplex" Version="4.8.*" />
@@ -16,9 +16,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\002_COMPONENTE_LOGIN\Prod.ComponenteLogin.Entidades\Prod.ComponenteLogin.Entidades.csproj" />
-    <ProjectReference Include="..\..\002_COMPONENTE_LOGIN\Prod.ComponenteLogin.MVC.Configuracion\Prod.ComponenteLogin.MVC.Configuracion.csproj" />
     <ProjectReference Include="..\Prod.ComponenteLogin.Datos\Prod.ComponenteLogin.Datos.csproj" />
+    <ProjectReference Include="..\Prod.ComponenteLogin.Entidades\Prod.ComponenteLogin.Entidades.csproj" />
+    <ProjectReference Include="..\Prod.ComponenteLogin.MVC.Configuracion\Prod.ComponenteLogin.MVC.Configuracion.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Aplicacion\Interfaces\" />
+    <Folder Include="Aplicacion\Proceso\" />
+    <Folder Include="Aplicacion\Validacion\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
