--- a/Prod.ComponenteLogin.Datos/Prod.ComponenteLogin.Datos.csproj
+++ b/Prod.ComponenteLogin.Datos/Prod.ComponenteLogin.Datos.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.90" />
+    <PackageReference Include="Release.Helper" Version="1.3.8" />
     <PackageReference Include="Release.Helper.Data.Core" Version="1.0.7" />
   </ItemGroup>
   <ItemGroup>
