--- a/Prod.ComponenteLogin.Core.Api/appsettings.Development.json
+++ b/Prod.ComponenteLogin.Core.Api/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "VUSPDbContext": "Data Source=172.20.11.43;Initial Catalog=DB_PORTALVUSP;user id=usr_portalvusp;password=Nuevoportal123;"
+    "VUSPDbContext": "Data Source=172.20.11.7;Initial Catalog=DB_NETLOGIN;user id=usr_login_unico;password=Ad3s44n7c0;"
   },
   "AppConfig": {
     "Urls": {
@@ -24,27 +24,8 @@
       "URL_DOMICILIO_SNE_API": "http://172.20.11.28:7009/NuevoUsuarioService.svc",
       "URL_EXPEDIENTE_SITRADOC_API": "http://172.20.11.9:7017/ExpedienteSitradoc.svc"
     },
-    "Paths": {
-      "path_DOC_NOTELE": "\\\\172.20.17.8\\contenedor_documentos_firmados_sne_des$",
-      "path_DOC_NOTELE_ADJUNTOS": "\\\\172.20.17.8\\contenedor_documentos_firmados_adjuntos_des$",
-      "path_DOC_NOTELE_ADJUNTOS_SITRADOC": "\\\\172.20.17.8\\contenedor_documentos_firmados_sne_adjuntos_des$",
-      "path_archivos_sne": "\\\\172.20.17.12\\sne_des$\\archivos_sne_des"
-    },
-    "VariablesSitradoc": {
-      "id_clase_documento_tupa": "133",
-      "id_estado_documento_mesa_partes": "8",
-      "id_tipo_documento": "4",
-      "id_estado_documento": "1",
-      "usuario": "usr_siap",
-      "id_clase_documento_cargo": "201",
-      "coddep_origen": "7",
-      "folio": "1",
-      "IdApp": "11",
-      "CodDepDestinoCargoRecepcion": "1716"
-    },
     "IsDebug": true,
     "CorreoDebug": "asantiago@produce.gob.pe",
     "EmailCargoRecepcion": "ogaci@produce.gob.pe"
   }
 }
-
