--- a/Prod.ComponenteLoginAngular.MVC/appsettings.Development.json
+++ b/Prod.ComponenteLoginAngular.MVC/appsettings.Development.json
@@ -18,7 +18,7 @@
       "URL_PERSONA_API": "http://172.20.11.9:7015/PersonasService.svc",
       "URL_SEGURIDAD": "http://172.20.11.9:7087/",
       "URL_DOMICILIO_SNE_API": "http://172.20.11.28:7009/NuevoUsuarioService.svc",
-      "URL_LOGIN_UNICO_API": "http://127.0.0.1:43495"
+      "URL_LOGIN_UNICO_API": "http://127.0.0.1:43496/"
     },
     "RegistroTramite": {
       //"RutaImagenLogo": "\\\\srvfile01\\ssa_des$\\"
