--- a/Prod.ComponenteLogin.Entidades/Prod.ComponenteLogin.Entidades.csproj
+++ b/Prod.ComponenteLogin.Entidades/Prod.ComponenteLogin.Entidades.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
+    <PackageReference Include="Release.Helper" Version="1.3.8" />
+  </ItemGroup>
+
 </Project>
