--- a/Prod.ComponenteLoginAngular.MVC/appsettings.Production.json
+++ b/Prod.ComponenteLoginAngular.MVC/appsettings.Production.json
@@ -24,9 +24,9 @@
       "RutaImagenLogo": "\\\\srvfile01\\ssa_des$\\"
     },
     "RegistroUsuario": {
-      "IdRol": "687", //738
-      "IdAplicacion": "90", //240
-      "Usuario": "VUSP" // login_unico
+      "IdRol": "738", //738
+      "IdAplicacion": "240", //240
+      "Usuario": "login_unico" // login_unico
     }
   }
 }
