--- a/Prod.ComponenteLoginAngular.MVC/Prod.ComponenteLoginAngular.MVC.csproj
+++ b/Prod.ComponenteLoginAngular.MVC/Prod.ComponenteLoginAngular.MVC.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.17" />
+    <PackageReference Include="Nancy" Version="2.0.0" />
     <PackageReference Include="Prod.Seguridad.Auth" Version="1.2.4" />
     <PackageReference Include="Prod.ServiciosExternos" Version="1.3.74" />
     <PackageReference Include="Serilog" Version="2.10.0" />
