--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/package.json
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/package.json
@@ -28,7 +28,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^3.3.7",
     "bootstrap3": "^3.3.5",
-    "crypto-js": "^3.1.9-1",
+    "crypto-js": "^3.3.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
     "mat-select-filter": "^2.3.6",
