--- a/Prod.ComponenteLoginAngular.MVC/appsettings.Production.json
+++ b/Prod.ComponenteLoginAngular.MVC/appsettings.Production.json
@@ -27,6 +27,12 @@
       "IdRol": "738", //738
       "IdAplicacion": "240", //240
       "Usuario": "login_unico" // login_unico
+    },
+
+    "UrlsAppIntegrado": {
+      "UrlInicio": "https://derapipez.produce.gob.pe/Inicio/index",
+      "UrlLogeado": "https://derapipez.produce.gob.pe/Producto/Producto/Index"
+
     }
   }
 }
