--- a/Prod.ComponenteLoginAngular.MVC/appsettings.Development.json
+++ b/Prod.ComponenteLoginAngular.MVC/appsettings.Development.json
@@ -21,8 +21,8 @@
       "URL_LOGIN_UNICO_API": "http://127.0.0.1:43496/"
     },
     "RegistroTramite": {
-      "RutaImagenLogo": "\\\\srvfile01\\ssa_des$\\"
-      //"RutaImagenLogo": "D:\\ssa_des$\\"
+      //"RutaImagenLogo": "\\\\srvfile01\\ssa_des$\\"
+      "RutaImagenLogo": "E:\\ssa_des$\\"
     },
     "RegistroUsuario": {
       "IdRol": "738", //738
