--- a/Prod.ComponenteLoginAngular.MVC/Prod.ComponenteLoginAngular.MVC.csproj
+++ b/Prod.ComponenteLoginAngular.MVC/Prod.ComponenteLoginAngular.MVC.csproj
@@ -29,5 +29,7 @@
     <ProjectReference Include="..\Prod.ComponenteLogin.MVC.Configuracion\Prod.ComponenteLogin.MVC.Configuracion.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties clientapp_4angular_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 
 </Project>
