--- a/Prod.LoginUnico.Web/ClientApp/package.json
+++ b/Prod.LoginUnico.Web/ClientApp/package.json
@@ -23,12 +23,16 @@
     "@angular/platform-browser-dynamic": "^14.0.3",
     "@angular/platform-server": "^14.0.3",
     "@angular/router": "^14.0.3",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ngx-bootstrap": "^9.0.0",
+    "ngx-spinner": "^14.0.0",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
     "rxjs": "~7.5.5",
+    "sweetalert2": "^11.4.33",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.6"
   },
