--- a/Prod.LoginUnico.Web/appsettings.Development.json
+++ b/Prod.LoginUnico.Web/appsettings.Development.json
@@ -7,5 +7,10 @@
     "Expiration": 60, // Minutes
     "Issuer": "https://produce.gob.pe",
     "Audience": "produce"
+  },
+  "Cors": {
+    "AllowedHosts": [
+      "https://localhost:44428"
+    ]
   }
 }
