--- a/Prod.LoginUnico.Web/appsettings.json
+++ b/Prod.LoginUnico.Web/appsettings.json
@@ -27,5 +27,9 @@
       "WithThreadId"
     ]
   },
+  "StaticFiles": {
+    //"Logo": "\\\\srvfile01\\ssa_des$\\"
+    "Logo": "D:\\ssa_des$\\"
+  },
   "AllowedHosts": "*"
 }
