--- a/Prod.LoginUnico.Web/appsettings.Development.json
+++ b/Prod.LoginUnico.Web/appsettings.Development.json
@@ -12,5 +12,15 @@
     "AllowedHosts": [
       "https://localhost:44428"
     ]
+  },
+  "Services": {
+    "UrlPersons": "http://172.20.11.9:7015/PersonasService.svc",
+    "UrlReniec": "http://172.20.11.9:7019/WCFSistemasService.svc",
+    "UrlSunat": "http://172.20.11.9:7023/WCFSistemasService.svc"
+  },
+  "UserAudit": {
+    "RoleId": "738",
+    "ApplicationId": "240",
+    "UserName": "login_unico"
   }
 }
