--- a/Prod.LoginUnico.Infrastructure/Prod.LoginUnico.Infrastructure.csproj
+++ b/Prod.LoginUnico.Infrastructure/Prod.LoginUnico.Infrastructure.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
   <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Prod.ServiciosExternos" Version="1.3.74" />
   </ItemGroup>
 
   <ItemGroup>
