--- a/Prod.LoginUnico.Web/Prod.LoginUnico.Web.csproj
+++ b/Prod.LoginUnico.Web/Prod.LoginUnico.Web.csproj
@@ -21,8 +21,14 @@
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
     <Content Remove="$(SpaRoot)**" />
-    <Content Remove="Logs\**" />
+    <Compile Remove="Extensions\**" />
+    <Compile Remove="Logs\**" />
+	<Content Remove="Extensions\**" />
+	<Content Remove="Logs\**" />
+	<EmbeddedResource Remove="Extensions\**" />
+	<EmbeddedResource Remove="Logs\**" />
     <None Remove="$(SpaRoot)**" />
+    <None Remove="Extensions\**" />
     <None Remove="Logs\**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
