--- a/Prod.LoginUnico.Web/ClientApp/package.json
+++ b/Prod.LoginUnico.Web/ClientApp/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ng-zorro-antd": "^14.0.0",
     "ngx-bootstrap": "^9.0.0",
     "ngx-spinner": "^14.0.0",
     "oidc-client": "^1.11.5",
