--- a/Prod.LoginUnico.Web/Prod.LoginUnico.Web.csproj
+++ b/Prod.LoginUnico.Web/Prod.LoginUnico.Web.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.4.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+    <PackageReference Include="UAParser" Version="3.1.47" />
   </ItemGroup>
 
   <ItemGroup>
