--- a/Prod.LoginUnico.Web/appsettings.Development.json
+++ b/Prod.LoginUnico.Web/appsettings.Development.json
@@ -29,5 +29,12 @@
   "ReCaptcha": {
     "SecretKey": "6Lerei4iAAAAAPCyGtmyffngohI3lHfMJHB9Omhc",
     "UrlValidator": "https://www.google.com/recaptcha/api/siteverify"
+  },
+  "SecuritySettings": {
+    "KeyDirectory": "C:/Key",
+    "ApplicationName": "SharedCookieApp",
+    "CookieName": ".AspNet.SharedCookie.Extranet",
+    "AccessDeniedPath": "",
+    "ExpireTimeSpan": 60
   }
 }
