--- a/Prod.RutaDigital.MVC/appsettings.Development.json
+++ b/Prod.RutaDigital.MVC/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "SecuritySettings": {
+    "KeyDirectory": "C:/Key",
+    "ApplicationName": "SharedCookieApp",
+    "CookieName": ".AspNet.SharedCookie.Extranet",
+    "AccessDeniedPath": "",
+    "ExpireTimeSpan": 60
   }
 }
