--- a/Prod.LoginUnico.Web/appsettings.Development.json
+++ b/Prod.LoginUnico.Web/appsettings.Development.json
@@ -36,5 +36,8 @@
     "CookieName": ".AspNet.SharedCookie.Extranet",
     "AccessDeniedPath": "",
     "ExpireTimeSpan": 60
+  },
+  "Urls": {
+    "URL_LOGIN_UNICO_WEB": "https://delogin.produce.gob.pe/"
   }
 }
