--- a/Prod.LoginUnico.Web/appsettings.Development.json
+++ b/Prod.LoginUnico.Web/appsettings.Development.json
@@ -20,7 +20,8 @@
     "UrlPersons": "http://172.20.11.9:7015/PersonasService.svc",
     "UrlReniec": "http://172.20.11.9:7019/WCFSistemasService.svc",
     "UrlSunat": "http://172.20.11.9:7023/WCFSistemasService.svc",
-    "UrlMigraciones": "http://172.20.11.9:7089/api/PIDE/"
+    "UrlMigraciones": "http://172.20.11.9:7089/api/PIDE/",
+    "UrlCorreo": "http://172.16.247.171:13050/correo/correo/"
   },
   "UserAudit": {
     "RoleId": "738",
@@ -42,6 +43,8 @@
     "ExpireTimeSpan": 60
   },
   "Urls": {
-    "URL_LOGIN_UNICO_WEB": "https://delogin.produce.gob.pe/"
+    "URL_LOGIN_UNICO_WEB": "https://delogin.produce.gob.pe/",
+    "URL_LOGIN_UNICO_CAMBIAR_PERSONA": "https://localhost:44428/auth/change-password-person",
+    "URL_LOGIN_UNICO_CAMBIAR_EMPRESA": "https://localhost:44428/auth/change-password-company"
   }
 }
