--- a/Prod.LoginUnico.Web/appsettings.Development.json
+++ b/Prod.LoginUnico.Web/appsettings.Development.json
@@ -45,6 +45,7 @@
   "Urls": {
     "URL_LOGIN_UNICO_WEB": "https://delogin.produce.gob.pe/",
     "URL_LOGIN_UNICO_CAMBIAR_PERSONA": "https://localhost:44428/auth/change-password-person",
-    "URL_LOGIN_UNICO_CAMBIAR_EMPRESA": "https://localhost:44428/auth/change-password-company"
+    "URL_LOGIN_UNICO_CAMBIAR_EMPRESA": "https://localhost:44428/auth/change-password-company",
+    "URL_DOMAIN_LOGIN_UNICO": "D:\\COMPONENTE_LOGIN_808_NEW\\COMPONENTE_LOGIN\\Prod.LoginUnico.Web\\"
   }
 }
