--- a/Prod.LoginUnico.Application/Prod.LoginUnico.Application.csproj
+++ b/Prod.LoginUnico.Application/Prod.LoginUnico.Application.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.2.2" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="Nancy" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="Prod.ServiciosExternos" Version="1.3.74" />
     <PackageReference Include="Release.Helper.Data.ICore" Version="1.1.7" />
