--- a/Prod.LoginUnico.Web/appsettings.Production.json
+++ b/Prod.LoginUnico.Web/appsettings.Production.json
@@ -42,6 +42,9 @@
     "ExpireTimeSpan": 60
   },
   "Urls": {
-    "URL_LOGIN_UNICO_WEB": "https://delogin.produce.gob.pe/"
+    "URL_LOGIN_UNICO_WEB": "https://delogin.produce.gob.pe/",
+    "URL_LOGIN_UNICO_CAMBIAR_PERSONA": "https://delogin.produce.gob.pe/auth/change-password-person",
+    "URL_LOGIN_UNICO_CAMBIAR_EMPRESA": "https://delogin.produce.gob.pe/auth/change-password-company",
+    "URL_DOMAIN_LOGIN_UNICO": "E:\\Aplicaciones\\login.web\\"
   }
 }
