--- a/Prod.LoginUnico.Web/appsettings.Development.json
+++ b/Prod.LoginUnico.Web/appsettings.Development.json
@@ -46,6 +46,6 @@
     "Url_login_unico_web": "https://delogin.produce.gob.pe/",
     "Url_cambiar_password_persona": "https://localhost:44428/auth/change-password-person",
     "Url_cambiar_password_empresa": "https://localhost:44428/auth/change-password-company",
-    "Url_domain_login_unico": "D:\\COMPONENTE_LOGIN_088_RECAPTCHA_NEW\\Prod.LoginUnico.Web\\"
+    "Url_domain_login_unico": "D:\\COMPONENTE_LOGIN_808_NEW\\COMPONENTE_LOGIN\\Prod.LoginUnico.Web\\"
   }
 }
