--- a/Prod.LoginUnico.Web/Prod.LoginUnico.Web.csproj
+++ b/Prod.LoginUnico.Web/Prod.LoginUnico.Web.csproj
@@ -41,6 +41,12 @@
     <ProjectReference Include="..\Prod.LoginUnico.Persistence\Prod.LoginUnico.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Plantillas\PasswordRecovery.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
