--- a/Prod.LoginUnico.Web/appsettings.Production.json
+++ b/Prod.LoginUnico.Web/appsettings.Production.json
@@ -19,7 +19,9 @@
   "Services": {
     "UrlPersons": "http://172.20.11.9:7015/PersonasService.svc",
     "UrlReniec": "http://172.20.11.9:7019/WCFSistemasService.svc",
-    "UrlSunat": "http://172.20.11.9:7023/WCFSistemasService.svc"
+    "UrlSunat": "http://172.20.11.9:7023/WCFSistemasService.svc",
+    "UrlMigraciones": "http://172.20.11.9:7089/api/PIDE/",
+    "UrlCorreo": "http://172.16.247.171:13050/correo/correo/"
   },
   "UserAudit": {
     "RoleId": "738",
